Fix issue with jumping content caused by scrollbar

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .app {
   display: grid;
   grid-template-rows: auto 1fr;
